adapted script for rate mlt